--- a/Basic_Lexical_Processing/basic_processing.ipynb
+++ b/Basic_Lexical_Processing/basic_processing.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Stopwords Example"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "source": [
@@ -16,15 +23,15 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### This section is about stopwords"
+    "### Download Alice in Wonderland from Gutenberg"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "source": [
-    "# Download Alice in Wonderland from Gutenberg\r\n",
+    "\r\n",
     "url = \"https://www.gutenberg.org/files/11/11-0.txt\"\r\n",
     "alice = requests.get(url)\r\n",
     "print(alice.text)"
@@ -3802,10 +3809,16 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "source": [
-    "# Shows what words are contained in the standard stopwords packages\r\n",
+    "### Shows what words are contained in the standard stopwords packages"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "source": [
     "print(stopwords.words('english'))"
    ],
    "outputs": [
@@ -3820,8 +3833,15 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Use sample piece of text to show stop words being removed from text"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "source": [
     "# Demo of using stop words on a piece of text\r\n",
     "sample_text = \"the great aim of education is not knowledge but action\""
@@ -3831,7 +3851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "source": [
     "# Break the sample text into words\r\n",
     "sample_words = sample_text.split()\r\n",
@@ -3850,7 +3870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "source": [
     "# Remove stopwords\r\n",
     "sample_words = [word for word in sample_words if word not in stopwords.words('english')]\r\n",
@@ -3869,9 +3889,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "source": [
-    "# Reverse the split operation which joins the words into a setence again\r\n",
+    "# Reverse the split operation which joins the words into a sentence again\r\n",
     "sample_text = \" \".join(sample_words)\r\n",
     "print(sample_text)"
    ],
@@ -3883,6 +3903,13 @@
       "great aim education knowledge action\n"
      ]
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Remove stop words in the Alice corpus"
    ],
    "metadata": {}
   },
