Updated notebook layout and added processing text for stop words

--- a/Basic_Lexical_Processing/basic_processing.ipynb
+++ b/Basic_Lexical_Processing/basic_processing.ipynb
@@ -3811,6 +3811,45 @@
   {
    "cell_type": "markdown",
    "source": [
+    "### Define a function which plots word frequencies"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "def plot_word_frequency(words, top_n=10):\r\n",
+    "    word_freq = FreqDist(words)\r\n",
+    "    labels = [element[0] for element in word_freq.most_common(top_n)]\r\n",
+    "    counts = [element[1] for element in word_freq.most_common(top_n)]\r\n",
+    "    plot = sns.barplot(labels, counts)\r\n",
+    "    return plot"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Plot the word frequencies that are in the Alice corpus "
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "alice_words = alice.text.split()\r\n",
+    "# Use the semi colon to stop function name being output to the stdout\r\n",
+    "plot_word_frequency(alice_words, 15);"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "### Shows what words are contained in the standard stopwords packages"
    ],
    "metadata": {}
@@ -3916,7 +3955,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "source": [
+    "no_stops = [word for word in alice_words if word not in stopwords.words(\"english\")]"
+   ],
    "outputs": [],
    "metadata": {}
   }
