Updated notebook with quanftifiers

--- a/MasterNLP/NLPRegex/regex.ipynb
+++ b/MasterNLP/NLPRegex/regex.ipynb
@@ -79,6 +79,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Quanitifiers"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -95,7 +102,98 @@
     }
    ],
    "source": [
+    "# Will search for pattern matching { a, ab, abbb, abbb... etc}\n",
     "find_pattern(\"ac\", \"ab*\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(0, 1), match='a'>\n",
+      "<re.Match object; span=(0, 2), match='ab'>\n",
+      "<re.Match object; span=(0, 3), match='abb'>\n",
+      "<re.Match object; span=(0, 27), match='abbbbbbbbbbbbbbbbbbbbbbbbbb'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(find_pattern(\"ac\", \"ab*\"))\n",
+    "print(find_pattern(\"abc\", \"ab*\"))\n",
+    "print(find_pattern(\"abbc\", \"ab*\"))\n",
+    "print(find_pattern(\"abbbbbbbbbbbbbbbbbbbbbbbbbbc\", \"ab*\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(0, 1), match='a'>\n",
+      "<re.Match object; span=(0, 2), match='ab'>\n",
+      "<re.Match object; span=(0, 2), match='ab'>\n",
+      "<re.Match object; span=(0, 1), match='a'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Checking whether a pattern is absent or not\n",
+    "print(find_pattern(\"ac\", \"ab?\"))\n",
+    "print(find_pattern(\"abc\", \"ab?\"))\n",
+    "print(find_pattern(\"abbc\", \"ab?\"))\n",
+    "# Will only match a as be is much separated\n",
+    "print(find_pattern(\"aqryshdcklomindb\", \"ab?\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "<re.Match object; span=(0, 2), match='ab'>\n",
+      "<re.Match object; span=(0, 3), match='abb'>\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# A couple of the examples will return none as there is not 1 or more instances of the pattern present\n",
+    "print(find_pattern(\"ac\", \"ab+\"))\n",
+    "print(find_pattern(\"abc\", \"ab+\"))\n",
+    "print(find_pattern(\"abbc\", \"ab+\"))\n",
+    "print(find_pattern(\"aqryshdcklomindb\", \"ab+\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(0, 3), match='abb'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check if a pattern is present n number of times\n",
+    "print(find_pattern(\"abbc\", \"ab{2}\"))"
    ]
   },
   {
